# ops

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: unittest.yml
docs/: lang.md  tick.md
optimus/: CMakeLists.txt  Makefile  ops.hpp  ts_mad.cpp  ts_mad.hpp  ts_mad_benchmark.cpp  ts_mad_test.cpp  ts_sum.cpp  ts_sum.hpp  ts_sum_benchmark.cpp  ts_sum_test.cpp
tools/: compare.py
tools/testdata/: new.json  new_ts_sum.json  old.json  old_ts_sum.json
